--- a/neural_search.ipynb
+++ b/neural_search.ipynb
@@ -1,18 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a926184a",
+   "cell_type": "markdown",
+   "id": "14525962",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Neural Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9ba90f9",
+   "metadata": {},
+   "source": [
+    "A neural search engine powered by BERT, K-Means, and Cosine Similarity"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "conda_pytorch_p38",
+   "language": "python",
+   "name": "conda_pytorch_p38"
   },
   "language_info": {
    "name": ""
