--- a/neural_search.ipynb
+++ b/neural_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "14525962",
+   "id": "08a9221c",
    "metadata": {},
    "source": [
     "# Neural Search"
@@ -10,10 +10,259 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ba90f9",
+   "id": "bdc823b5",
    "metadata": {},
    "source": [
-    "A neural search engine powered by BERT, K-Means, and Cosine Similarity"
+    "An AI powered search engine using Transformers, K-Means, and Cosine Similarity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2bf9cbb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: You are using pip version 22.0.4; however, version 22.3.1 is available.\n",
+      "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/pytorch_p38/bin/python -m pip install --upgrade pip' command.\u001b[0m\u001b[33m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install -q transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "cf62f009",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sagemaker\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0cab1829",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sess = sagemaker.Session()\n",
+    "\n",
+    "bucket_name = sess.default_bucket()\n",
+    "role_name = sagemaker.get_execution_role()\n",
+    "\n",
+    "bucket_prefix = \"neural-search\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e322f9e4",
+   "metadata": {},
+   "source": [
+    "## Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "50cea18a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ec2-user/anaconda3/envs/pytorch_p38/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3524: DtypeWarning: Columns (10) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_location = f\"s3://{bucket_name}/{bucket_prefix}/data\"\n",
+    "\n",
+    "movies_metadata_location = f\"{data_location}/movies_metadata.csv\"\n",
+    "df_movies = pd.read_csv(movies_metadata_location)\n",
+    "\n",
+    "ratings_location = f\"{data_location}/ratings_small.csv\"\n",
+    "df_ratings = pd.read_csv(ratings_location)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "73d386e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adult</th>\n",
+       "      <th>belongs_to_collection</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>homepage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>imdb_id</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>...</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>video</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
+       "      <td>http://toystory.disney.com/toy-story</td>\n",
+       "      <td>862</td>\n",
+       "      <td>tt0114709</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>373554033.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   adult                              belongs_to_collection    budget  \\\n",
+       "0  False  {'id': 10194, 'name': 'Toy Story Collection', ...  30000000   \n",
+       "\n",
+       "                                              genres  \\\n",
+       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
+       "\n",
+       "                               homepage   id    imdb_id original_language  \\\n",
+       "0  http://toystory.disney.com/toy-story  862  tt0114709                en   \n",
+       "\n",
+       "  original_title                                           overview  ...  \\\n",
+       "0      Toy Story  Led by Woody, Andy's toys live happily in his ...  ...   \n",
+       "\n",
+       "  release_date      revenue runtime                          spoken_languages  \\\n",
+       "0   1995-10-30  373554033.0    81.0  [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "\n",
+       "     status  tagline      title  video vote_average vote_count  \n",
+       "0  Released      NaN  Toy Story  False          7.7     5415.0  \n",
+       "\n",
+       "[1 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_movies.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "98cdb248",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userId</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1260759144</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   userId  movieId  rating   timestamp\n",
+       "0       1       31     2.5  1260759144"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ratings.head(1)"
    ]
   }
  ],
@@ -24,7 +273,16 @@
    "name": "conda_pytorch_p38"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
