Created embeddings and similarity model

--- a/neural_search.ipynb
+++ b/neural_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "08a9221c",
+   "id": "9d13c0ae",
    "metadata": {},
    "source": [
     "# Neural Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdc823b5",
+   "id": "d8781ec0",
    "metadata": {},
    "source": [
     "An AI powered search engine using Transformers, K-Means, and Cosine Similarity."
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2bf9cbb2",
+   "id": "3888cad1",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "cf62f009",
+   "id": "3a4951b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0cab1829",
+   "id": "f4e7ff89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e322f9e4",
+   "id": "35fcf324",
    "metadata": {},
    "source": [
     "## Load data"
@@ -72,8 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "50cea18a",
+   "execution_count": 23,
+   "id": "d3b4ef92",
    "metadata": {},
    "outputs": [
     {
@@ -83,24 +83,7 @@
       "/home/ec2-user/anaconda3/envs/pytorch_p38/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3524: DtypeWarning: Columns (10) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
      ]
-    }
-   ],
-   "source": [
-    "data_location = f\"s3://{bucket_name}/{bucket_prefix}/data\"\n",
-    "\n",
-    "movies_metadata_location = f\"{data_location}/movies_metadata.csv\"\n",
-    "df_movies = pd.read_csv(movies_metadata_location)\n",
-    "\n",
-    "ratings_location = f\"{data_location}/ratings_small.csv\"\n",
-    "df_ratings = pd.read_csv(ratings_location)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "73d386e1",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/html": [
@@ -197,72 +180,215 @@
        "[1 rows x 24 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_movies.head(1)"
+    "data_location = f\"s3://{bucket_name}/{bucket_prefix}/data/movies_metadata.csv\"\n",
+    "\n",
+    "df = pd.read_csv(data_location)\n",
+    "\n",
+    "df.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "98cdb248",
+   "execution_count": 24,
+   "id": "762d7ca6",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>userId</th>\n",
-       "      <th>movieId</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>timestamp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>1260759144</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   userId  movieId  rating   timestamp\n",
-       "0       1       31     2.5  1260759144"
+       "0    Led by Woody, Andy's toys live happily in his ...\n",
+       "Name: overview, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_ratings.head(1)"
+    "overview_df = df[\"overview\"]\n",
+    "\n",
+    "overview_df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51185d9f",
+   "metadata": {},
+   "source": [
+    "## Load embedding model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "0688c260",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import BertModel, BertTokenizer\n",
+    "import torch\n",
+    "from itertools import combinations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7f46212c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f99517944b4540c88463fd67319e998a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/232k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f88b22eee5684a1a82b420f967164664",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/28.0 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9a1aa6b75ead48f98625cd16bafad792",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/570 [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d52f14db3b9f4e2d9df981705df4ec0e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading:   0%|          | 0.00/440M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at bert-base-uncased were not used when initializing BertModel: ['cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.decoder.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.bias', 'cls.predictions.transform.LayerNorm.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.bias']\n",
+      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name = \"bert-base-uncased\"\n",
+    "\n",
+    "tokenizer = BertTokenizer.from_pretrained(model_name)\n",
+    "model = BertModel.from_pretrained(model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "3cd9a718",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mean_pooling(model_output, attention_mask):\n",
+    "    token_embeddings = model_output.last_hidden_state\n",
+    "    input_mask_expanded = (\n",
+    "        attention_mask.unsqueeze(-1).expand(token_embeddings.size()).float()\n",
+    "    )\n",
+    "    \n",
+    "    pooled = torch.sum(token_embeddings * input_mask_expanded, 1) / torch.clamp(input_mask_expanded.sum(1), min=1e-9)\n",
+    "    \n",
+    "    return torch.nn.functional.normalize(pooled, p=2, dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "5b91d6e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 768])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_text = [\"Hello world from the cloud\", \"I am going for a walk today\", \"The sun is looking very nice\"]\n",
+    "\n",
+    "encoded_input = tokenizer(sample_text, padding=True, truncation=True, return_tensors=\"pt\")\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    out = model(**encoded_input)\n",
+    "\n",
+    "sentence_embeddings = mean_pooling(out, encoded_input[\"attention_mask\"])\n",
+    "\n",
+    "sentence_embeddings.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "8a6db59d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.4999)\n",
+      "tensor(0.5250)\n",
+      "tensor(0.6630)\n"
+     ]
+    }
+   ],
+   "source": [
+    "cosine_similarity_model = torch.nn.CosineSimilarity(dim=0, eps=1e-6)\n",
+    "\n",
+    "tuples = combinations(list(range(sentence_embeddings.size()[0])), 2)\n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    for i, j in tuples:\n",
+    "        out = cosine_similarity_model(sentence_embeddings[i], sentence_embeddings[j])\n",
+    "        print(f\"'{sample_text[i]}', '{sample_text[j]}'\")\n"
    ]
   }
  ],
