Created text comparison from word embedding model

--- a/neural_search.ipynb
+++ b/neural_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9d13c0ae",
+   "id": "8f11ac2e",
    "metadata": {},
    "source": [
     "# Neural Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8781ec0",
+   "id": "40edb412",
    "metadata": {},
    "source": [
     "An AI powered search engine using Transformers, K-Means, and Cosine Similarity."
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3888cad1",
+   "id": "e551a357",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3a4951b3",
+   "id": "285f15ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f4e7ff89",
+   "id": "ef9806d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35fcf324",
+   "id": "d700690e",
    "metadata": {},
    "source": [
     "## Load data"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d3b4ef92",
+   "id": "dc81f0d7",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "762d7ca6",
+   "id": "ce819600",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51185d9f",
+   "id": "e0a6e63a",
    "metadata": {},
    "source": [
     "## Load embedding model"
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0688c260",
+   "id": "3ce1ac9f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7f46212c",
+   "id": "1005b4c4",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "3cd9a718",
+   "id": "9c1cb34f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,23 +336,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "5b91d6e8",
+   "execution_count": 67,
+   "id": "c5dd1f20",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([3, 768])"
+       "torch.Size([5, 768])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sample_text = [\"Hello world from the cloud\", \"I am going for a walk today\", \"The sun is looking very nice\"]\n",
+    "sample_text = [\"The moon looks beautiful today\", \"I am going for a walk today\", \"Do you like the moon?\", \"Those are some tasty sandwiches\", \"Why is that castle old?\"]\n",
     "\n",
     "encoded_input = tokenizer(sample_text, padding=True, truncation=True, return_tensors=\"pt\")\n",
     "\n",
@@ -366,17 +366,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "8a6db59d",
+   "execution_count": 68,
+   "id": "6a530633",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(0.4999)\n",
-      "tensor(0.5250)\n",
-      "tensor(0.6630)\n"
+      "'The moon looks beautiful today', 'I am going for a walk today', similarity=0.6303966045379639\n",
+      "'The moon looks beautiful today', 'Do you like the moon?', similarity=0.7295293807983398\n",
+      "'The moon looks beautiful today', 'Those are some tasty sandwiches', similarity=0.6001173257827759\n",
+      "'The moon looks beautiful today', 'Why is that castle old?', similarity=0.6742875576019287\n",
+      "'I am going for a walk today', 'Do you like the moon?', similarity=0.6220574378967285\n",
+      "'I am going for a walk today', 'Those are some tasty sandwiches', similarity=0.5492238402366638\n",
+      "'I am going for a walk today', 'Why is that castle old?', similarity=0.5797369480133057\n",
+      "'Do you like the moon?', 'Those are some tasty sandwiches', similarity=0.5650840401649475\n",
+      "'Do you like the moon?', 'Why is that castle old?', similarity=0.7014718055725098\n",
+      "'Those are some tasty sandwiches', 'Why is that castle old?', similarity=0.5975286364555359\n"
      ]
     }
    ],
@@ -387,8 +394,16 @@
     "\n",
     "with torch.no_grad():\n",
     "    for i, j in tuples:\n",
-    "        out = cosine_similarity_model(sentence_embeddings[i], sentence_embeddings[j])\n",
-    "        print(f\"'{sample_text[i]}', '{sample_text[j]}'\")\n"
+    "        similarity = cosine_similarity_model(sentence_embeddings[i], sentence_embeddings[j])\n",
+    "        print(f\"'{sample_text[i]}', '{sample_text[j]}', similarity={similarity}\")\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "6b19912d",
+   "metadata": {},
+   "source": [
+    "So now we need to come up with a model pipeline where we first take the text from pandas, move it to the GPU, run the model on all of the text in batches, record the vectors in the dataframe, perform KMeansClustering with a trained model, create labels for the dataframe, then for a given piece of text get its embeddings and its cluster, then perform cosine similarity search between all elements in the cluster and then rank accordingly"
    ]
   }
  ],
